# auricle

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  build_warnings.txt  metadata.json  package.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: pr-guards.yml  release-beta.yml  release-stable.yml
docs/: index.html
packaging/chocolatey/: auricle.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/inno/: auricle.iss
packaging/scoop/: auricle.json
src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: addons.rs  bridge.rs  cache.rs  mod.rs  musicbrainz.rs  persistence.rs  playback.rs  stream_player.rs  streaming.rs
src-tauri/ui/: native_shell.slint
src/core/: addons.rs  cache.rs  mod.rs  persistence.rs  playback.rs  stream_player.rs  updater.rs
ui/: native_shell.slint
