[package]
name = "auricle"
version = "0.1.2"
description = "Auricle — a native music player desktop shell built with Rust and Slint"
authors = ["you"]
license = "GPL-3.0-only"
repository = "https://github.com/californiaAlmonds/auricle"
edition = "2021"
rust-version = "1.77.2"
default-run = "auricle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "auricle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
slint-build = "1.8.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
ytmapi-rs = "0.3.1"
tokio = "1.52.1"
once_cell = "1"
reqwest = { version = "0.13.2", features = ["json", "multipart", "rustls", "form", "blocking"] }
slint = "1.8.0"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
symphonia = { version = "0.5.5", features = ["aac", "mp3", "isomp4", "opt-simd"] }
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
zip = "2.2"
self_update = { version = "0.42", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"], optional = true }

[features]
# `self-update` is on by default for the portable build. Installer/Store builds
# (scoop/winget/chocolatey/msix) must be built with `--no-default-features` so the
# package manager / Microsoft Store owns updates instead of the in-app updater.
default = ["self-update"]
self-update = ["dep:self_update"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
